th causes problems that td doesn't

--- a/dj/main/static/css/show_stats.css
+++ b/dj/main/static/css/show_stats.css
@@ -35,3 +35,10 @@ table.grid td {
 	border-color: black;
 	background-color: white;
 }
+
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
