--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -12,6 +12,7 @@
 <tr><td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td></tr>
 <tr><td><a href="{% url schedule show.id show.slug %}">schedule</a></td></tr>
 <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
+<tr><td><a href="{% url room_signs show.id %}{{show.slug}}.pdf">room_signs.pdf</a></td></tr>
 <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
 <tr><td><a href="{% url show_stats show.id %}">show stats</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
