remove extra admin link

--- a/dj/main/templates/client.html
+++ b/dj/main/templates/client.html
@@ -8,8 +8,7 @@
 {% block content %}
 
   <table class="shortcuts">
-    <a href="{% url admin:main_client_change client.id%}">admin</a>
-    <a href="/admin/main/client/{{client.id}}">admin</a>
+    <a href="{% url admin:main_client_change client.id%}">client admin</a>
   </table>
 
     <table class=tpick>
