better alerts, longest title/authors for title screen authoring

--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -101,5 +101,7 @@
     {% endfor %}
   </table>
 
+  max name: <a href="E/{{max_name_ep.id}}/">{{ max_name_ep.name }}</a><br/>
+  max authors: <a href="E/{{max_authors_ep.id}}/">{{ max_authors_ep.authors }}</a>
 
 {% endblock %}
