pull hardcoded rsvp

--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -4,7 +4,7 @@ ANN: {{client.name}} {{location.name}} {{episodes.0.start|date:"D F j, fp" }}
 {{client.name}}
 =========================
 When: {{episodes.0.start|date:"f A l F j, Y"}}
-Where: {{location.name}} - You need to RSVP to get past security, see link below.
+Where: {{location.name}} 
 
 {{show.description}}
 
