Edited dj/main/templates/meeting_announcement.html via GitHub

--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -21,6 +21,17 @@ Where: {{location.name}}
 
 {{show.description}}
 
+{# TODO:
+
+
+RSVP Quick Links:
+
+YES http://chipy.org/meetings/rsvp/{{meetingid}}/yes
+MAYBE http://chipy.org/meetings/rsvp/{{meetingid}}/maybe
+
+#}
+
+
 Topics
 ------
 {% for episode in episodes %} {{forloop.counter}}. {{episode.start|date:"g:i"}} {{ episode.name }} ({{episode.authors}})
