pyohio title resized text

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -46,8 +46,8 @@
 <br/>
 <a href={% url episode_logs episode.id %}>logs</a><br/>
 
-<a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/bling/{{episode.slug}}.svg">
-svg</a><br/>
+<a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/bling/{{episode.slug}}.svg"> svg</a>
+<a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/bling/{{episode.slug}}.png"> png</a><br/>
 
 
 <video src="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/ogv/{{episode.slug}}.ogv" controls width=200 ></video>
