--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -15,7 +15,7 @@
 <tr><td><a href="{% url release show.id %}{{show.slug}}_release.pdf">release.pdf</a></td></tr>
 <tr><td><a href="{% url room_signs show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td></tr>
 <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
-<tr><td><a href="{% url show_stats show.id %}">show stats</a></td></tr>
+<tr><td><a href="{% url show_stats show.id %}" title="{{show.name}}">show stats</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
 <tr><td><a href=
 {%if location_slug %}
