--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -37,7 +37,9 @@ Details
 {% if episode.tags %}tags: {{episode.tags}}{% endif %}
 {% if episode.description %} {{episode.description}} {% else %}(Needs description.) {% endif %}
 {% if show.announcement_state == 2 %}
-recording release: {{episode.released|yesno:"yeah,no,maybe" }}
+recording release: {{episode.released|yesno:"yeah,no,maybe" }} 
+{# license: {{episode.released|yesno:[episode.lisense,""] }} #}
+{% if episode.released %}license: {{episode.license}} {%endif%}
 EDIT: http://nextdayvideo.com:8080{% url admin:main_episode_change episode.id%}
 {% endif %}
 {% if episode.public_url %} Video: {{episode.public_url}} {% endif %}
