--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -45,6 +45,7 @@
   <a href="http://blip.tv/file/{{episode.host_url}}?skin=rss">rss</a> 
   {#<a href={{episode.host_url}}>host</a> #}
 {% endif %}
+<a href="{% url pdf 'release_agreements' show.id episode.id %}{{episode.slug}}.pdf">release</a> 
 {% if episode.public_url %}
   <a href={{episode.public_url}}>public</a> 
 {% endif %}
