--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -11,9 +11,9 @@
 <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
 <tr><td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td></tr>
 <tr><td><a href="{% url schedule show.id show.slug %}">schedule</a></td></tr>
-<tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a></td></tr>
-<tr><td><a href="{% url release show.id %}{{show.slug}}_release.pdf">release.pdf</a></td></tr>
-<tr><td><a href="{% url room_signs show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td></tr>
+<tr><td><a href="{% url pdfs 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a></td></tr>
+<tr><td><a href="{% url pdfs 'release_agreements' show.id %}{{show.slug}}_release.pdf">release.pdf</a></td></tr>
+<tr><td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td></tr>
 <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
 <tr><td><a href="{% url show_stats show.id %}" title="{{show.name}}">show stats</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
