really send email, use with care

--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -3,7 +3,7 @@
 {% if show.announcement_state == 2 %}
 please proof: {{client.name}} meeting announcement 
 
-{# Subject and below is what will go out, and what will be used to title the videos. $}
+{# Subject and below is what will go out, and what will be used to title the videos. #}
 If you want to edit your stuff, 
 ask me for an account, then use the the edit URL under your item.  
 Anything else, email me.  
