--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -41,8 +41,8 @@
 <a href="{% url raw_list episode.id %}{{episode.slug}}.m3u">raw-playlist</a> 
 <a href="{% url enc_list episode.id %}{{episode.slug}}.m3u">encoded-files-playlist</a> 
 {% if episode.host_url %}
-  <a href="http://blip.tv/file/{{episode.host_url}}">host</a> 
-  <a href="http://blip.tv/file/{{episode.host_url}}?skin=rss">rss</a> 
+  <a href="{{episode.host_url}}">host</a> 
+  {# <a href="http://blip.tv/file/{{episode.host_url}}?skin=rss">rss</a> #}
   {#<a href={{episode.host_url}}>host</a> #}
 {% endif %}
 <a href="{% url pdf 'release_agreements' show.id episode.id %}{{episode.slug}}.pdf">release</a> 
