scipy title slide

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -90,7 +90,7 @@
   <tr>
   <td>
   {{clrfform.clid}}
-    ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}<br>
+  <b>~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}</b>
   <table border=1>
   <tbody>
     <tr>
