show durration of steps in log

--- a/dj/main/templates/episode_logs.html
+++ b/dj/main/templates/episode_logs.html
@@ -8,10 +8,14 @@
 {% block content %}
 
 <table border=1>
-  <tr><th>State</th><th>Ready</th><th>Start</th><th>End</th><th>Result</th></tr>
+    <tr><th>State</th><th>Ready</th><th>Start</th><th>End</th><th>Durration</th><th>Result</th></tr>
 {% for log in logs %}
   <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
-  <td>{{log.state.slug}}</td><td>{{log.ready}}</td><td>{{log.start}}</td><td>{{log.end}}</td><td>{{log.result}}</td>
+      <td>{{log.state.slug}}</td>
+      <td>{{log.ready}}</td>
+      <td>{{log.start}}</td><td>{{log.end}}</td>
+      <td>{{log.start|timesince:log.end}}</td>
+      <td>{{log.result}}</td>
   </tr>
 {% endfor %}
 </table>
