move sleep to top of loop

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -160,7 +160,7 @@
 </tbody>
 </table>
 
-{{ episode_form.state }}
+{# { episode_form.state } #}
 
 {% if user.is_authenticated %}
   <input type="submit" value="Save" />
