--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -36,21 +36,21 @@
 {% if episode.conf_url %}
   <a href="{{episode.conf_url}}">{{episode.conf_url}}</a><br/>
 {% endif %}
-<a href="{% url admin:main_episode_change episode.id%}">admin</a>
+<a href="{% url 'admin:main_episode_change' episode.id%}">admin</a>
 <a href="/databrowse/main/episode/objects/{{episode.id}}/">databrowse</a>
-<a href="{% url raw_list episode.id %}{{episode.slug}}.m3u">raw-playlist</a>
-<a href="{% url enc_list episode.id %}{{episode.slug}}.m3u">encoded-files-playlist</a>
+<a href="{% url 'raw_list' episode.id %}{{episode.slug}}.m3u">raw-playlist</a>
+<a href="{% url 'enc_list' episode.id %}{{episode.slug}}.m3u">encoded-files-playlist</a>
 {% if episode.host_url %}
   <a href="{{episode.host_url}}">host</a>
   {# <a href="http://blip.tv/file/{{episode.host_url}}?skin=rss">rss</a> #}
   {#<a href={{episode.host_url}}>host</a> #}
 {% endif %}
-<a href="{% url pdf 'release_agreements' show.id episode.id %}{{episode.slug}}.pdf">release</a>
+<a href="{% url 'pdf' 'release_agreements' show.id episode.id %}{{episode.slug}}.pdf">release</a>
 {% if episode.public_url %}
   <a href={{episode.public_url}}>public</a>
 {% endif %}
 <br/>
-<a href={% url episode_logs episode.id %}>logs</a><br/>
+<a href={% url 'episode_logs' episode.id %}>logs</a><br/>
 
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.svg"> svg</a>
 <a href="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.png"> png</a><br/>
@@ -127,10 +127,10 @@
       <tr> <td>
          {{ clrfform.split.label_tag }}{{ clrfform.split }}
 </td>
-      <td><a href="{% url admin:main_raw_file_change cl.raw_file.id%}">admin</a></td>
+      <td><a href="{% url 'admin:main_raw_file_change' cl.raw_file.id%}">admin</a></td>
       <td>
-<a href="{% url admin:main_cut_list_change cl.id%}">admin</a>
-<a href="{% url admin:main_cut_list_change cl.id%}delete/">delete</a>
+<a href="{% url 'admin:main_cut_list_change' cl.id%}">admin</a>
+<a href="{% url 'admin:main_cut_list_change' cl.id%}delete/">delete</a>
 	 </td>
       </tr>
 
