--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -5,10 +5,10 @@
 {% endblock %}
 {% block content %}
 <table class=tpick>
-<tr class=row1><td> <a href="{% url clients %}">Clients</a> </td></tr>
-<tr class=row2><td> <a href="{% url locations %}">Locations</a> </td></tr>
+<tr class=row1><td> <a href="{% url 'clients' %}">Clients</a> </td></tr>
+<tr class=row2><td> <a href="{% url 'locations' %}">Locations</a> </td></tr>
 </table>
 <table class=tpick>
-<tr class=row1><td> <a href="{% url tests %}">Tests</a> </td></tr>
+<tr class=row1><td> <a href="{% url 'tests' %}">Tests</a> </td></tr>
 </table>
 {% endblock %}
