draft - email meta preview

--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -104,7 +104,7 @@
     {% endfor %}
   </table>
 
-  max name: <a href="E/{{max_name_ep.id}}/">{{ max_name_ep.name }}</a><br/>
-  max authors: <a href="E/{{max_authors_ep.id}}/">{{ max_authors_ep.authors }}</a>
+  max name: #{{max_name_ep.id}} <a href="E/{{max_name_ep.id}}/">{{ max_name_ep.name }}</a><br/>
+  max authors: # {{max_authors_ep.id}} <a href="E/{{max_authors_ep.id}}/">{{ max_authors_ep.authors }}</a>
 
 {% endblock %}
