--- a/dj/main/templates/episode_logs.html
+++ b/dj/main/templates/episode_logs.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 
+{{episode.name}} 
 <table border=1>
     <tr><th>State</th><th>Ready</th><th>Start</th><th>End</th><th>Durration</th><th>Result</th></tr>
 {% for log in logs %}
