added closing script tag, cuz I'm tarded.  moved the script into the content block

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -5,12 +5,11 @@
 <title>veyepar: {{episode.name}}</title>
 {% endblock %}
 
-<script>
-$(function() { 
-  $( "#accordian").accordian();
-});
-{% block content %}
 
+{% block content %}
+<script> $( function () {
+  ( "#function").accordian(); 
+});</script>
 <a href="{% url client client.slug %}">{{ client.name }}</a>
 <a href="{% url episode_list client.slug show.slug%}">{{ show.name }}</a>
 <br/>
